<resources>
    <string name="app_name">Hampter Chat</string>
    <string name="on_boarding_screen_title">Hello Hampter!</string>
    <string name="on_boarding_screen_subtitle">We need to register you in order enter in our crew</string>
    <string name="on_boarding_screen_pat_to_continue">Pat me to continue</string>
    <string name="on_boarding_screen_go_to_authentication">I\'m already a hampter</string>
    <string name="register_screen_title_requesting_email">Firstly we need your email to know where to send some cheese</string>
    <string name="register_email_placeholder">hampter@hampter.com</string>
    <string name="register_screen_password_hint">Password</string>
    <string name="register_screen_title_requesting_password">Now let’s secure your cheese with a password</string>
    <string name="register_screen_title_requesting_name_username_gender">In the end we need to know your hampter name, username and gender</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_too_short_password">Password must have at least 8 characters</string>
    <string name="error_empty_username">Username shouldn\'t be empty</string>
    <string name="error_empty_name">Name shouldn\'t be empty</string>
    <string name="error_unselected_gender">Gender is unselected</string>
    <string name="gender_hint">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="sign_up_button">Let\'s gooo!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="login_title">We need your email and your password to identify if you are a suspicious hampter</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_button">I\'m not suspicious</string>
    <string name="error_weak_password">The password is weak</string>
    <string name="error_user_exists">Email is already used</string>
    <string name="conversation_list_friend_title">Friends</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>