<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.atitienei_daniel.hampterchat.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="35dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailTextField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTextField"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@{viewModel.email}"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTextField"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@{viewModel.password}"
                android:textColorHint="#546E7A"
                tools:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/forgot_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordTextField" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/sign_in_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>